--- a/java/CMakeLists.txt
+++ b/java/CMakeLists.txt
@@ -32,19 +32,17 @@ else (WIN32)
 endif (WIN32)
 
 # SWIG execution
+set (EXECUTE_COMMAND "${SWIG_EXECUTABLE} -v -c++ -java")
+if ("${SWIG_VERSION}" VERSION_GREATER_EQUAL "4.0.0")
+	set (EXECUTE_COMMAND "${EXECUTE_COMMAND} -doxygen")
+endif ()
+if (WITH_FESAPI)
+	set (EXECUTE_COMMAND "${EXECUTE_COMMAND} -DWITH_FESAPI")
+endif (WITH_FESAPI)
+set (EXECUTE_COMMAND "${EXECUTE_COMMAND} -package com.f2i_consulting.fetpapi -o ${CMAKE_SOURCE_DIR}/swig/swigGeneratedJavaWrapper.cpp -outdir ${CMAKE_SOURCE_DIR}/java/src/com/f2i_consulting/fetpapi/ ${CMAKE_SOURCE_DIR}/swig/swigEtp1_2Include.i")
 if (WIN32)
-	if ("${SWIG_VERSION}" VERSION_GREATER_EQUAL "4.0.0")
-		set ( EXECUTE_COMMAND "${SWIG_EXECUTABLE} ${SWIG_DEFINITIONS} -v -c++ -java -doxygen -package com.f2i_consulting.fetpapi -o ${CMAKE_SOURCE_DIR}/swig/swigGeneratedJavaWrapper.cpp -outdir ${CMAKE_SOURCE_DIR}/java/src/com/f2i_consulting/fetpapi/ ${CMAKE_SOURCE_DIR}/swig/swigEtp1_2Include.i")
-	else ()
-		set ( EXECUTE_COMMAND "${SWIG_EXECUTABLE} ${SWIG_DEFINITIONS} -v -c++ -java -package com.f2i_consulting.fetpapi -o ${CMAKE_SOURCE_DIR}/swig/swigGeneratedJavaWrapper.cpp -outdir ${CMAKE_SOURCE_DIR}/java/src/com/f2i_consulting/fetpapi/ ${CMAKE_SOURCE_DIR}/swig/swigEtp1_2Include.i")
-	endif ()
 	execute_process(COMMAND powershell ${EXECUTE_COMMAND})
 elseif (UNIX)
-	if ("${SWIG_VERSION}" VERSION_GREATER_EQUAL "4.0.0")
-		set ( EXECUTE_COMMAND ${SWIG_EXECUTABLE} ${SWIG_DEFINITIONS} -v -c++ -java -doxygen -package com.f2i_consulting.fetpapi -o ${CMAKE_SOURCE_DIR}/swig/swigGeneratedJavaWrapper.cpp -outdir ${CMAKE_SOURCE_DIR}/java/src/com/f2i_consulting/fetpapi/ ${CMAKE_SOURCE_DIR}/swig/swigEtp1_2Include.i)
-	else ()
-		set ( EXECUTE_COMMAND ${SWIG_EXECUTABLE} ${SWIG_DEFINITIONS} -v -c++ -java -package com.f2i_consulting.fetpapi -o ${CMAKE_SOURCE_DIR}/swig/swigGeneratedJavaWrapper.cpp -outdir ${CMAKE_SOURCE_DIR}/java/src/com/f2i_consulting/fetpapi/ ${CMAKE_SOURCE_DIR}/swig/swigEtp1_2Include.i)
-	endif ()
 	execute_process(COMMAND ${EXECUTE_COMMAND})
 endif (WIN32)
 message("SWIG Java files have been generated.")
@@ -53,9 +51,23 @@ message("SWIG Java files have been generated.")
 set(CMAKE_JAVA_COMPILE_FLAGS -g)
 file (GLOB_RECURSE SWIG_JAVA_FILES ${CMAKE_SOURCE_DIR}/java/src/com/f2i_consulting/fetpapi/*.java)
 if (SWIG_LINKED_TO_RELEASE)
-	add_jar(fetpapiJava${CMAKE_RELEASE_POSTFIX} ${SWIG_JAVA_FILES} VERSION ${Fetpapi_VERSION})
+	if (NOT EXISTS ${FESAPI_JAR})
+		add_jar(fetpapiJava${CMAKE_RELEASE_POSTFIX} ${SWIG_JAVA_FILES}
+				VERSION ${Fetpapi_VERSION})
+	else ()
+		add_jar(fetpapiJava${CMAKE_RELEASE_POSTFIX} ${SWIG_JAVA_FILES}
+				INCLUDE_JARS ${FESAPI_JAR}
+				VERSION ${Fetpapi_VERSION})
+	endif ()
 else (SWIG_LINKED_TO_RELEASE)
-	add_jar(fetpapiJava${CMAKE_DEBUG_POSTFIX} ${SWIG_JAVA_FILES} VERSION ${Fetpapi_VERSION})
+	if (NOT EXISTS ${FESAPI_JAR})
+		add_jar(fetpapiJava${CMAKE_DEBUG_POSTFIX} ${SWIG_JAVA_FILES}
+				VERSION ${Fetpapi_VERSION})
+	else ()
+		add_jar(fetpapiJava${CMAKE_DEBUG_POSTFIX} ${SWIG_JAVA_FILES}
+				INCLUDE_JARS ${FESAPI_JAR}
+				VERSION ${Fetpapi_VERSION})
+	endif ()
 endif (SWIG_LINKED_TO_RELEASE)
 
 target_sources(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/swig/swigGeneratedJavaWrapper.cpp)
