Do not require FESAPI_JAR cmake variable if WITH_JAVA is not set

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,10 +97,12 @@ if (WITH_FESAPI)
 	if (NOT EXISTS ${FESAPI_LIBRARY_DEBUG})
 		message(WARNING "The FESAPI library (FESAPI_LIBRARY_DEBUG variable) does not look to be a valid file. Please modify it.")
 	endif ()
-	set (FESAPI_JAR FESAPI_JAR-NOTFOUND CACHE FILEPATH "Path to the jar of FESAPI")
-	if (NOT EXISTS ${FESAPI_JAR})
-		message(SEND_ERROR "The FESAPI library (FESAPI_JAR variable) does not look to be a valid file. Please modify it.")
-	endif ()
+	if (WITH_JAVA_WRAPPING)
+		set (FESAPI_JAR FESAPI_JAR-NOTFOUND CACHE FILEPATH "Path to the jar of FESAPI")
+		if (NOT EXISTS ${FESAPI_JAR})
+			message(SEND_ERROR "The FESAPI library (FESAPI_JAR variable) does not look to be a valid file. Please modify it.")
+		endif ()
+	endif (WITH_JAVA_WRAPPING)
 endif (WITH_FESAPI)
 
 
