--- a/java/CMakeLists.txt
+++ b/java/CMakeLists.txt
@@ -32,18 +32,27 @@ else (WIN32)
 endif (WIN32)
 
 # SWIG execution
-set (EXECUTE_COMMAND "${SWIG_EXECUTABLE} -v -c++ -java")
+set (EXECUTE_COMMAND "${SWIG_EXECUTABLE}")
+list (APPEND EXECUTE_COMMAND -v)
+list (APPEND EXECUTE_COMMAND -c++)
+list (APPEND EXECUTE_COMMAND -java)
 if ("${SWIG_VERSION}" VERSION_GREATER_EQUAL "4.0.0")
-	set (EXECUTE_COMMAND "${EXECUTE_COMMAND} -doxygen")
+        list (APPEND EXECUTE_COMMAND -doxygen)
 endif ()
 if (WITH_FESAPI)
-	set (EXECUTE_COMMAND "${EXECUTE_COMMAND} -DWITH_FESAPI")
+        list (APPEND EXECUTE_COMMAND -DWITH_FESAPI)
 endif (WITH_FESAPI)
-set (EXECUTE_COMMAND "${EXECUTE_COMMAND} -package com.f2i_consulting.fetpapi -o ${CMAKE_SOURCE_DIR}/swig/swigGeneratedJavaWrapper.cpp -outdir ${CMAKE_SOURCE_DIR}/java/src/com/f2i_consulting/fetpapi/ ${CMAKE_SOURCE_DIR}/swig/swigEtp1_2Include.i")
+list (APPEND EXECUTE_COMMAND -package)
+list (APPEND EXECUTE_COMMAND com.f2i_consulting.fetpapi)
+list (APPEND EXECUTE_COMMAND -o)
+list (APPEND EXECUTE_COMMAND ${CMAKE_SOURCE_DIR}/swig/swigGeneratedJavaWrapper.cpp)
+list (APPEND EXECUTE_COMMAND -outdir)
+list (APPEND EXECUTE_COMMAND ${CMAKE_SOURCE_DIR}/java/src/com/f2i_consulting/fetpapi/)
+list (APPEND EXECUTE_COMMAND ${CMAKE_SOURCE_DIR}/swig/swigEtp1_2Include.i)
 if (WIN32)
-	execute_process(COMMAND powershell ${EXECUTE_COMMAND})
+        execute_process(COMMAND powershell ${EXECUTE_COMMAND})
 elseif (UNIX)
-	execute_process(COMMAND ${EXECUTE_COMMAND})
+        execute_process(COMMAND ${EXECUTE_COMMAND})
 endif (WIN32)
 message("SWIG Java files have been generated.")
 
