Basic support for sending dataArray request using several map entries
The several map entries are based on max websocket payload size.

Also now target FESAPI2.1.1 instead of 2.1.0

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -159,7 +159,7 @@ jobs:
       
       # fesapi 
       - powershell: |
-          git clone https://github.com/F2I-Consulting/fesapi.git C:/fesapi
+          git clone https://github.com/F2I-Consulting/fesapi.git -b v2.1.1.0 C:/fesapi
         displayName: 'Cloning fesapi'
       - task: CMake@1
         displayName: 'CMake configure fesapi'
@@ -202,7 +202,7 @@ jobs:
             -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.2-install/lib/avrocpp_s.lib
             -DWITH_FESAPI=TRUE
             -DFESAPI_INCLUDE_DIR=C:/fesapi-install/include
-            -DFESAPI_LIBRARY_RELEASE=C:/fesapi-install/lib/FesapiCpp.2.1.0.0.lib
+            -DFESAPI_LIBRARY_RELEASE=C:/fesapi-install/lib/FesapiCpp.2.1.1.0.lib
 
       - task: CMake@1
         displayName: "Build --config $(BuildType)"
@@ -374,7 +374,7 @@ jobs:
           
       # fesapi
       - powershell: |
-          git clone https://github.com/F2I-Consulting/fesapi.git C:/fesapi
+          git clone https://github.com/F2I-Consulting/fesapi.git -b v2.1.1.0 C:/fesapi
         displayName: 'Cloning fesapi'
       - task: CMake@1
         displayName: 'CMake configure fesapi'
@@ -419,7 +419,7 @@ jobs:
             -DAVRO_LIBRARY_RELEASE=$(Agent.TempDirectory)/avro-cpp-1.10.2-install/lib/avrocpp_s.lib
             -DWITH_FESAPI=TRUE
             -DFESAPI_INCLUDE_DIR=C:/fesapi-install/include
-            -DFESAPI_LIBRARY_RELEASE=C:/fesapi-install/lib/FesapiCpp.2.1.0.0.lib
+            -DFESAPI_LIBRARY_RELEASE=C:/fesapi-install/lib/FesapiCpp.2.1.1.0.lib
 
       - task: CMake@1
         displayName: "Build --config $(BuildType)"
@@ -526,7 +526,7 @@ jobs:
        
       # fesapi
       - script: |
-          git clone https://github.com/F2I-Consulting/fesapi.git $(Agent.TempDirectory)/fesapi
+          git clone https://github.com/F2I-Consulting/fesapi.git -b v2.1.1.0 $(Agent.TempDirectory)/fesapi
         displayName: 'Cloning fesapi'
       - task: CMake@1
         displayName: 'CMake configure fesapi'
