Swig port for SSL client

--- a/java/CMakeLists.txt
+++ b/java/CMakeLists.txt
@@ -42,6 +42,9 @@ endif ()
 if (WITH_FESAPI)
         list (APPEND EXECUTE_COMMAND -DWITH_FESAPI)
 endif (WITH_FESAPI)
+if (WITH_ETP_SSL)
+        list (APPEND EXECUTE_COMMAND -DWITH_ETP_SSL)
+endif (WITH_ETP_SSL)
 list (APPEND EXECUTE_COMMAND -package)
 list (APPEND EXECUTE_COMMAND com.f2i_consulting.fetpapi)
 list (APPEND EXECUTE_COMMAND -o)
